Fixed overflow for ultra-wide screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,8 @@ body {
     margin: 0;
 }
 
-body .overflow-x-hidden {
-    overflow-x: hidden;
+.overflow-hidden {
+    overflow: hidden;
 }
 
 h1 {
